tests/reject/genericCompatibilityOptionals.emojic
🏁 🍇
  🖍🆕 a 🍨🐚🍬🍆🔡
  🍨 🔤Curiosity🔤 🔤Doesn’t🔤 🍆 ➡️ a1
  a1 ➡️ 🖍🆕a
🍉
